templates/po_style.scss
@page{
    size: A4 portrait;
    // width: 21cm;
    // height:29.7cm;
    margin : 0.2cm;
    padding-top: 6.4cm;
    padding-bottom: 3.5cm;

    @top-center{
        content: element(real-header);
        width:20.175cm;
    }

    @bottom-center{
        content: element(real-footer);
        // width:20.175cm;
        // width: 20.175cm;
        width: 20.175cm;
        // margin-left: auto;
        // margin-right: 0.106cm;
    }
}

.show-counter{
    content: counter(page) " of " counter(pages);
}

.real-header{
    position:running(real-header);
    width: 100%;
    margin-top: 6.86cm;
    display: grid;
    grid-template-rows: auto auto auto;
    // background-color: grey;
}

.header-gap{
    border: solid;
    border-top-width: 0px;
    border-left-width: 2px;
    border-right-width: 2px;
    border-bottom-width: 0px;

    padding-bottom: 22cm;
}

.header-right-text{
    font-size: 10px;
}

.real-footer{
    // background-color: green;
    position: running(real-footer);
    width: 100%;
    // margin-bottom: 4.0cm;
    margin-bottom: 26cm;
//     border: solid;
//     border-width: 2px;
}

.page{
    // padding-top: 6.4cm; // Gonta ganti margin top gada bedannya.
    display: block;
}

.top-header{
    display: flex;
    flex-direction: row;
    justify-content: end;
}

.top-header-box{
    border-style: solid;
    border-width: 2px;
    height: 2cm;
    width: 200px;
    display: grid;
    align-items: center;
}

.top-header-arrange{
    padding: 4px;
    display: grid;
    grid-template-columns: 1fr 1fr;
}

.top-header-arrange div{
    font-size: 8px;
}

.mid-title{
    font-weight : bold;
    display: grid;
    justify-content: center;
    align-items: center;
    font-size: 14px;

    margin: 0px;
    padding: 0px;
    height: min-content;

    border: black solid;
    border-width: 0px;
    border-left-width: 2px;
    border-right-width: 2px;

}

div{
    font-size: 12px;
}

.main-body{
    border-style: solid;
    border-width: 2px;
    border-bottom-width: 0px;
    border-top-width: 0px;
    
    padding : 0px;
    margin : 0px;
  
    // DISABLING THIS SOMEHOW MAKES THE PAGE BREAK WORK.
    // height: 26cm;
    // display:grid;
    // grid-template-rows: 13% 3% min-content 10% auto 12%;
}

.testpage-gap{
    border: solid;
    border-left-width: 0px;
    border-right-width: 0px;
    border-top-width: 0px;
    border-bottom-width: 2px;
}

.gap{
    border: solid;
    border-left-width: 2px;
    border-right-width: 2px;
    border-bottom-width: 2px;
}

.gap-borderless{
    background-color: green;
    border: none;
}

.header{
    margin-top: 0.2cm;
    
    border-style: solid;
    border-color: black;
    border-left-width: 2px;
    border-right-width: 2px;
    border-top-width: 2px;
    border-bottom-width: 0px;

    height: 3.38cm;

    display:grid;
    grid-template-columns: 1fr 1fr;
}

.header-side-left{
    display: grid;
    grid-template-rows: 60% 40%;
    padding: 4px;
}

.header-side-right{
    display: grid;
    grid-template-rows: 1fr 1fr;
    padding: 10px;
    justify-content: center;
}

.our-company-name{
    font-size : 17px;
    font-weight : bold;
}

.our-company-address{
    font-size: 10px;
}

.their-company-name{
    font-weight : bold;
    font-size: 12px;
}

.their-company-address{
    font-size: 10px;
}

.header-side-right-info{
    display: grid;
    grid-template-columns: 50px 50px 100px;
    width: fit-content;
}

.header-side-right div{
    height: 20px;
}

.sideright-alignright{
    text-align: end;
    margin-right: 8px;
}

.table-config{
    width: 100%;
    border-collapse: collapse;
}

.table-page-break-after{
    break-inside: avoid;
}

.table-header{
    display: table-header-group;
}

.table-foot{
    display: table-footer-group;
}

.table-style{
    border-style : solid;
    border-width: 0px;
    border-color: black;
    border-bottom-width: 4px;
    border-collapse : collapse;
    max-width: 100%;
    width: 100%;

    margin: 0px;
}

.table-style-leftmost{
    border-style: solid;
    border-color: black;
    border-collapse: collapse;
    border-width: 2px;
    border-left-width: 0px;
    margin: 0px;
    padding-left: 4px;
}

.table-style-rightmost{
    border-style: solid;
    border-color: black;
    border-collapse: collapse;
    border-width: 2px;
    border-right-width: 0px;
    margin: 0px;
    padding-right: 4px;
}

.table-regular{
    border-style: solid;
    border-width: 2px;;
    border-color: black;
    border-collapse: collapse;

    margin: 0px;
}

.table-pad-right-4px{
    padding-right: 4px;
}

.table-center-text{
    text-align: center;
    align-items: center;
    justify-content: center;
}

.table-header-left{
    border-style: solid;
    border-width: 2px;
    border-color: black;
    text-align: center;
    border-collapse: collapse;

    border-left-width: 0px;
    margin: 0px;
}

.table-header-right{
    border-style: solid;
    border-width: 2px;
    border-color: black;
    text-align: center;
    border-collapse: collapse;

    border-right-width: 0px;
    margin: 0px;
}

.table-header-reg{
    border-style: solid;
    border-width: 2px;
    border-color: black;
    text-align: center;
    border-collapse: collapse;

    margin: 0px;
}

.table-style tbody tr td{

    margin: 0px;
}

.hr-bold{
    height: 2px;
    border-width: 0px;
    color: black;
    background-color: black;
}

.summary-receiving{
    margin-top: 2cm;
    display: grid;
    grid-template-rows: 0.5cm;
    width: stretch;
}

.summary{
    display: grid;
    grid-template-rows: 1fr;
    width: stretch;

    break-inside: avoid;
    // break-inside: auto;
}

.summary-container{
    display:flex;
    flex-direction: row-reverse;
    height: fit-content;
    margin: 0px;
    padding: 0px;
    padding-right: 4px;
}

.summary-container-end{
    margin:0px;
    padding: 0px;
    
    padding-left: 20px;
    padding-right: 3px;
    display: grid;
    grid-template-columns: auto auto 300px;
    height: fit-content;
    width: max-content;
}

.the-summary{
    margin: 0px;
    padding : 0px;
    padding-right: 4px;
    display: grid;
    grid-template-columns: 36% 22% 5% 38%;
}

.summary-presentation{
    margin: 0px;
    padding: 0px;

    width: max-content;
    display: grid;

    grid-template-columns: 300px;
    width: 300px;
    height:fit-content;
    align-items: right;
    justify-content: right;
    text-align: end;
}

.hr-padding-margin{
    margin: 0px;
    padding: 0px;
}


.additional{
    display: grid;
    grid-template-columns: 2fr 1fr 1fr;

    border: solid;
    border-width: 2px;
}

.additional-rows{
    display : grid;
    width: 200px;
    grid-template-rows: 1fr;
    margin-left: 10px;
}

.additional-info{
    display: grid;
    grid-template-columns: 2fr 1fr 1fr;
    margin-bottom: 4px;
}

.additional-info div{
    font-size: 10px;
}

.handsign-space{
    display: grid;
    grid-template-columns: 50% 50%;
    width: 120px;
}

.handsign-arrangement{
    padding: 5px;
    display: grid;
    justify-content: center;
    text-align: center;
    grid-template-rows: 80% 20%;
    width: auto;
    
}

